# context-violation-detection

./: .gitignore  docker-compose-run-fastapi.sh  handler_fastapi.py  nginx.conf  pyproject.toml
data/parquet/: forbidden_words.parquet
project/context_violation_detection/: __init__.py  main.py
project/context_violation_detection/config/: __init__.py  settings.py
project/context_violation_detection/data/parquet/: forbidden_words.parquet  products.parquet
project/context_violation_detection/db/: __init__.py  fetch.py  insert.py
project/context_violation_detection/model/: __init__.py  groq_checker.py
project/context_violation_detection/notebook/: eda.ipynb  violating_products.csv
project/context_violation_detection/notebook/.ipynb_checkpoints/: eda-checkpoint.ipynb
project/context_violation_detection/route/: __init__.py  routes.py
project/context_violation_detection/service/: __init__.py  api.py  api_client.py  batch_checker.py  insert_violation.py  load_parquet.py  prepare_data.py  save_to_parquet.py
project/context_violation_detection/task/: runner.py
ssh-tunnel-mldb/: docker-compose.yaml  dockerfile  sysinstall.sh
